# cross-lingual-distillation

./: README.md  pyproject.toml
src/: dataset.py
