[tool.poetry]
name = "cross-lingual-distillation"
version = "0.1.0"
description = ""
authors = ["Santiago <shpotes3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
